--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,20 +32,18 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+//    implementation 'com.android.support:appcompat-v7:28.0.0'
+//    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
+    implementation 'androidx.appcompat:appcompat:1.1.0'
 
-    implementation 'com.alibaba:fastjson:1.2.47'
-    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
-
-    implementation 'com.lzy.net:okgo:3.0.4'
+//    implementation 'com.alibaba:fastjson:1.2.47'
+//    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
+//
+//    implementation 'com.lzy.net:okgo:3.0.4'
     //友盟统计
-    implementation 'com.umeng.umsdk:analytics:7.5.4'
-    implementation 'com.umeng.umsdk:common:1.5.4'
+//    implementation 'com.umeng.umsdk:analytics:7.5.4'
+//    implementation 'com.umeng.umsdk:common:1.5.4'
 
     //日志拦截器
    // api 'com.squareup.okhttp3:logging-interceptor:3.9.1'
