--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="a.c8.cn">
 
     <application
+        android:name="com.regus.MyApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -11,13 +12,15 @@
         android:theme="@style/AppTheme">
 
 
-        <activity android:name="com.regus.mj.MJRegusActivity">
+        <activity android:name="com.regus.mj.setDataUtilActivity">
             <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
 
 
         <!--<activity-->
