--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme">
 
 
-        <activity android:name="com.regus.mj.setDataUtilActivity">
+        <activity android:name="com.regus.mj.MJRegusGGActivity">
             <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
@@ -21,7 +22,9 @@
         </activity>
 
 
+        <activity android:name="swu.xl.linkgame.Activity.WebViewActivity">
 
+        </activity>
 
         <!--<activity-->
         <!--android:name="com.regus.mj.MJRegusActivity"-->
