--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,36 @@
         android:theme="@style/AppTheme">
 
 
-        <activity android:name="com.regus.mj.MJRegusGGActivity">
-            <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+<!--        <activity android:name="com.regus.mj.MJRegusGGActivity">-->
+<!--            <intent-filter>-->
+<!--            <action android:name="android.intent.action.MAIN" />-->
 
-            <category android:name="android.intent.category.LAUNCHER" />
+<!--            <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
+
+        <activity android:name="com.regus.mj.GcashHelperActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+        <service
+            android:name="com.regus.mj.ControlService"
+            android:enabled="true"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/auto_control_service_config" />
+        </service>
 
 
         <activity android:name="swu.xl.linkgame.Activity.WebViewActivity">
